--- a/envios.html
+++ b/envios.html
@@ -70,14 +70,6 @@
                 <ul class="flex-menu">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./tienda.html">Tienda</a></li>
-                    <!-- <li>
-                        <a href="./categorias.html">Categorías</a>
-                        <ul class="submenu">
-                            <li><a href="#">Gadgets</a></li>
-                            <li><a href="#">Geek</a></li>
-                            <li><a href="#">Oficina Tech</a></li>
-                        </ul>
-                    </li> -->
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./micuenta.html">Mi Cuenta</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
@@ -137,8 +129,8 @@
 
                     <p><strong>Contacto:</strong></p>
                     <p class="contacto">
-                        📱 <span class="neon-text">WhatsApp:</span> <span class="rojo">11-3420-7384</span><br>
-                        ✉️ <span class="neon-text">Email:</span> <span class="rojo">ventasweb@cdmarket.com.ar</span>
+                        📱 <span class="neon-text">WhatsApp:</span> <span class="rojo">11-6624-8428</span><br>
+                        ✉️ <span class="neon-text">Email:</span> <span class="rojo">ventasweb@oestech.com.ar</span>
                     </p>
                 </div>
             </div>
@@ -162,9 +154,8 @@
             <div class="footer-section">
                 <h4>NOSOTROS</h4>
                 <ul>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
-                    <li><a href="#">Locales</a></li>
                     <li><a href="./servicio.html">Servicio Técnico</a></li>
                 </ul>
             </div>
@@ -173,9 +164,6 @@
                 <h4>CORPORATIVO</h4>
                 <ul>
                     <li><a href="./ventaCorpo.html">Venta Corporativa</a></li>
-                    <li><a href="#">Prensa</a></li>
-                    <li><a href="#">Términos y Condiciones</a></li>
-                    <li><a href="#">Botón de Arrepentimiento</a></li>
                 </ul>
             </div>
 
@@ -195,19 +183,22 @@
                 <p>Lunes a Viernes de 10 a 18 hs</p>
                 <p><i class="fab fa-whatsapp"></i> 11-6624-8428</p>
                 <p><i class="fas fa-envelope"></i> ventas@oestech.com</p>
-                <button class="info-btn">INFO SOBRE ENVIOS</button>
+                <a href="./envios.html">
+                    <button class="info-btn">+ INFO</button>
+                </a>
             </div>
             <div>
                 <h4>SERVICIO TÉCNICO</h4>
                 <p>Lunes a Viernes de 9 a 18 hs</p>
                 <p>Villa Urquiza-CABA</p>
+                <a href="./servicio.html">
                 <button class="info-btn">+ INFO</button>
+                </a>
             </div>
             <div>
                 <h4>NUESTROS LOCALES</h4>
                 <p>Caballito · Flores · Microcentro · Tribunales</p>
                 <p>DOT Baires · San Justo · Tortugas Open Mall</p>
-                <button class="info-btn">+ INFO</button>
             </div>
         </div>
 
@@ -220,6 +211,7 @@
                 sin previo aviso.</small>
         </div>
     </footer>
+
 
     <script src="./js/products.js"></script>
     <script src="./js/carrito.js"></script>
