--- a/nosotros.html
+++ b/nosotros.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-    content="¿Tenés dudas o consultas? Escribinos desde nuestro formulario de contacto. Atención personalizada.">
-    <meta name="keywords" content="contacto, soporte técnico, consultas, OESTECH">
-    <meta name="author" content="OESTECH">
+        content="Conocé la historia y misión de CD Market, líderes en videojuegos y tecnología desde 1993." />
+    <meta name="keywords" content="CD Market, nosotros, historia, tecnología, videojuegos, equipo, misión, visión" />
+    <meta name="author" content="Oestech" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,11 +25,12 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./css/StylesContacto.css">
+        <link rel="stylesheet" href="./css/StylesNosotros.css">
+    <!-- <link rel="stylesheet" href="./css/StylesServicios.css"> -->
 
     <link rel="stylesheet" href="./css/Styles.css">
     <link rel="icon" href="./img/iconoOestch.png" type="image/x-icon">
-    <title>OESTECH - Contacto</title>
+    <title>OESTECH - Nosotros</title>
 </head>
 
 <body>
@@ -62,6 +63,7 @@
         </div>
     </div>
 
+    <!-- Header -->
     <header class="header">
         <div class="grid-container">
             <div class="logo">
@@ -81,7 +83,7 @@
         </div>
     </header>
 
-        <div class="barra-promociones">
+    <div class="barra-promociones">
         <div class="promociones-contenido">
             <span><i class="fas fa-percentage"></i>20% OFF en transferencias</span>
             <span><i class="fas fa-credit-card"></i>6 cuotas sin interés</span>
@@ -90,67 +92,86 @@
         </div>
     </div>
 
-    <main class="main">
 
-        <h1 class="estilosTitulos">Contactos</h1>
-        <section class="contacto-info-neon">
-            <h3>Consultas por Compras Online</h3>
-            <p><strong>Email:</strong> <a href="mailto:ventasweb@oestech.com.ar">ventasweb@oestech.com.ar</a></p>
-            <p><strong>Tel:</strong> 011-6624-8428 (Lunes a Viernes de 10 a 18 hs)</p>
-            <p class="nota">*Consultas sobre funcionamiento de la página, ayuda para comprar en el sitio y soporte Post
-                Venta web exclusivamente.</p>
 
-            <p><strong>CVs y empleos:</strong> <a
-                    href="mailto:rrhhoestech@oestech.com.ar">rrhhcdmarket@oestech.com.ar</a></p>
-            <p><strong>Proveedores y propuestas:</strong> <a href="mailto:info@oestech.com.ar">info@oestech.com.ar</a>
-            </p>
+    <main class="layout-servicio">
 
-            <p><strong>Locales:</strong> <a href="#">Click acá</a></p>
+        <section class="card-neon" >
 
-            <div class="redes-sociales">
-                <h3>Redes Sociales</h3>
-                <a href="https://facebook.com" target="_blank">
-                    <img src="img/facebook.png" alt="Facebook" />
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="img/instagram.png" alt="Instagram" />
-                </a>
-            </div>
+        <h1>NOSOTROS</h1>
+
+        <h2>¿Quiénes Somos?</h2>
+        <p class="subtitulo">OESTECH: Líder en Videojuegos y Tecnología</p>
+        <p>
+            En OESTECH llevamos a las personas con el mundo del entretenimiento digital.
+            Fundada en 2025, nuestra misión desde el primer día ha sido fomentar el uso de software legal en Argentina,
+            ofreciendo los mejores títulos de videojuegos para PC y consolas.
+        </p>
+        <p>
+            Con una red de <span class="destacado">locales</span> en Buenos Aires, nos hemos consolidado como la
+            primera opción para quienes
+            buscan videojuegos, tecnología , geek y Gadgets de alta calidad.
+        </p>
+
+        <h2>Nuestra Historia</h2>
+        <p>
+            En 2025, con las consolas de quinta generación como la PlayStation 2 y la Dreamcast,
+            redoblamos nuestra apuesta por el mercado argentino. Entendimos que hacía falta una empresa local que
+            ofreciera:
+        </p>
+        <ul>
+            <li>Productos de alta calidad.</li>
+            <li>Atención personalizada.</li>
+            <li>Garantías reales en todas las compras.</li>
+        </ul>
+        <p>
+            Hoy, gracias a esta visión, somos reconocidos como la cadena líder en videojuegos, tecnología , geek y Gadgets en Argentina.
+        </p>
+
+        <h2>Por Qué Elegirnos</h2>
+        <p>En OESTECH, combinamos experiencia y pasión porque <strong>¡WE LOVE GAMES!</strong></p>
+        <ul>
+            <li><strong>Selección rigurosa de productos:</strong> Nuestro equipo de compras está compuesto por expertos
+                en videojuegos, tecnología , geek y Gadgets. Si un producto no cumple con nuestros estándares, no llega a nuestras
+                tiendas.</li>
+            <li><strong>Equipo apasionado y capacitado:</strong> Cada miembro de nuestro staff vive y respira
+                videojuegos, tecnología , geek y Gadgets. Cuando nos visitás, te atienden personas que realmente saben de lo que hablan.</li>
+            <li><strong>Novedades primero:</strong> Somos los primeros en traer las últimas tendencias y lanzamientos al
+                mercado.</li>
+        </ul>
+
+        <h2>Nuestra Misión</h2>
+        <p>
+            Acercar el entretenimiento digital a todas las personas de manera simple, económica y accesible, mejorando
+            su calidad de vida a través del ocio y el confort. Innovamos constantemente para ofrecer lo mejor del
+            mercado global del entretenimiento.
+        </p>
+
+        <h2>Nuestra Visión</h2>
+        <p>
+            Consolidarnos como la empresa referente en el mercado del entretenimiento, trayendo las últimas tendencias
+            con la misma confiabilidad que nos ha caracterizado durante estos años.
+        </p>
+
+        <h2>Unite a Nuestro Equipo</h2>
+        <p>
+            ¿Sos apasionado por los videojuegos y la tecnología? Si tenés disponibilidad full time y creés que cumplís
+            con lo necesario para formar parte de nuestro equipo, envianos tu CV con foto a
+            <a href="mailto:rrhhoestech@oestech.com.ar">rrhhoestech@oestech.com.ar</a>. Recordá incluir una carta de
+            presentación y renombrar el archivo de tu CV con tu nombre y apellido.
+        </p>
+
+        <h2>Por Qué Somos Diferentes</h2>
+        <p>
+            No solo somos la tienda número uno en <span class="destacado">videojuegos, tecnología , geek y Gadgets</span>, sino que
+            también nos enorgullece ofrecer un servicio excepcional.
+        </p>
+
         </section>
 
-
-
-        <section>
-            <section>
-
-                <h2 class="estilosTitulos">Formulario de Contacto</h2>
-                <div>
-                    <form action="https://formspree.io/f/mblollow" method="POST">
-                        <div>
-                            <label>
-                                Your name:
-                                <input type="name" name="name" required />
-                            </label>
-                        </div>
-                        <div>
-                            <label>
-                                Your email:
-                                <input type="email" name="email" required />
-                            </label>
-                        </div>
-                        <div>
-                            <label>
-                                Your message:
-                                <textarea name="message"></textarea>
-                            </label>
-                        </div>
-                        <!-- your other form fields go here -->
-                        <button type="submit">Send</button>
-                    </form>
-                </div>
-            </section>
-        </section>
     </main>
+
+    <!-- Footer -->
 
     <footer class="footer">
         <div class="footer-top">
@@ -226,6 +247,7 @@
     <script src="./js/products.js"></script>
     <script src="./js/carrito.js"></script>
     <script src="./js/tienda.js"></script>
+
 
 </body>
 
