--- a/servicio.html
+++ b/servicio.html
@@ -72,14 +72,6 @@
                 <ul class="flex-menu">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./tienda.html">Tienda</a></li>
-                    <!-- <li>
-                        <a href="./categorias.html">Categorías</a>
-                        <ul class="submenu">
-                            <li><a href="#">Gadgets</a></li>
-                            <li><a href="#">Geek</a></li>
-                            <li><a href="#">Oficina Tech</a></li>
-                        </ul>
-                    </li> -->
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./micuenta.html">Mi Cuenta</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
@@ -107,27 +99,25 @@
         <aside class="menu-corporativo">
             <h3>Corporativo</h3>
             <ul>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="servicio-tecnico.html">Servicio Técnico</a></li>
-                <li><a href="venta-corporativa.html">Venta Corporativa</a></li>
-                <li><a href="prensa.html">Prensa</a></li>
-                <li><a href="terminos.html">Términos y Condiciones</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
+                <li><a href="./Contacto.html">Contacto</a></li>
+                <li><a href="./servicio.html">Servicio Técnico</a></li>
+                <li><a href="./ventaCorpo.html">Venta Corporativa</a></li>
             </ul>
         </aside>
 
         <section class="servicio-tecnico">
             <h2>Servicio Técnico</h2>
             <p>
-                En CD Market contamos con un laboratorio técnico, con 25 años de experiencia, que ofrece el servicio de
+                En OESTECH contamos con un laboratorio técnico, que ofrece el servicio de
                 calidad que nuestros clientes esperan.
                 Un laboratorio electrónico especializado en videojuegos dedicado a la reparación y mantenimiento de
                 consolas.
             </p>
 
-            <h3>📍 Avenida Córdoba 1176 - CABA</h3>
+            <h3>📍 Altolaguirre, Villa Urquiza - CABA</h3>
             <p><strong>Horario de atención:</strong> Lunes a viernes de 9 a 18 hs.</p>
-            <p class="telefono">📞 <span>4375-1464</span></p>
+            <p class="telefono">📞 <span>4766-0254</span></p>
 
             <div class="listado">
                 <h4>Reparamos:</h4>
@@ -160,20 +150,16 @@
             <div class="footer-section">
                 <h4>NOSOTROS</h4>
                 <ul>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
-                    <li><a href="#">Locales</a></li>
-                    <li><a href="#">Servicio Técnico</a></li>
+                    <li><a href="./servicio.html">Servicio Técnico</a></li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h4>CORPORATIVO</h4>
                 <ul>
-                    <li><a href="#">Venta Corporativa</a></li>
-                    <li><a href="#">Prensa</a></li>
-                    <li><a href="#">Términos y Condiciones</a></li>
-                    <li><a href="#">Botón de Arrepentimiento</a></li>
+                    <li><a href="./ventaCorpo.html">Venta Corporativa</a></li>
                 </ul>
             </div>
 
@@ -193,19 +179,22 @@
                 <p>Lunes a Viernes de 10 a 18 hs</p>
                 <p><i class="fab fa-whatsapp"></i> 11-6624-8428</p>
                 <p><i class="fas fa-envelope"></i> ventas@oestech.com</p>
-                <button class="info-btn">INFO SOBRE ENVIOS</button>
+                <a href="./envios.html">
+                    <button class="info-btn">+ INFO</button>
+                </a>
             </div>
             <div>
                 <h4>SERVICIO TÉCNICO</h4>
                 <p>Lunes a Viernes de 9 a 18 hs</p>
                 <p>Villa Urquiza-CABA</p>
+                <a href="./servicio.html">
                 <button class="info-btn">+ INFO</button>
+                </a>
             </div>
             <div>
                 <h4>NUESTROS LOCALES</h4>
                 <p>Caballito · Flores · Microcentro · Tribunales</p>
                 <p>DOT Baires · San Justo · Tortugas Open Mall</p>
-                <button class="info-btn">+ INFO</button>
             </div>
         </div>
 
