--- a/ventaCorpo.html
+++ b/ventaCorpo.html
@@ -72,14 +72,6 @@
                 <ul class="flex-menu">
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./tienda.html">Tienda</a></li>
-                    <!-- <li>
-                        <a href="./categorias.html">Categorías</a>
-                        <ul class="submenu">
-                            <li><a href="#">Gadgets</a></li>
-                            <li><a href="#">Geek</a></li>
-                            <li><a href="#">Oficina Tech</a></li>
-                        </ul>
-                    </li> -->
                     <li><a href="./ofertas.html">Ofertas</a></li>
                     <li><a href="./micuenta.html">Mi Cuenta</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
@@ -111,12 +103,12 @@
             <p>
                 Atención personalizada para clientes-empresa, descuentos especiales y asesoramiento e información sobre
                 productos de nuestro catálogo.<br>
-                CD Market puede abastecer la demanda de productos en cantidad, para regalos empresariales, promociones o
+                OESTECH puede abastecer la demanda de productos en cantidad, para regalos empresariales, promociones o
                 acciones de marketing.
             </p>
             <p>¿Cómo comunicarse con nosotros? Fácil, envianos un mail a
-                <a href="mailto:mlrodriguez@memotec.com.ar">mlrodriguez@memotec.com.ar</a> o a
-                <a href="mailto:ventascorporativas@cdmarket.com.ar">ventascorporativas@cdmarket.com.ar</a> con los
+                <a href="mailto:ezequielriente@oestech.com">ezequielriente@oestech.com.ar</a> o a
+                <a href="mailto:ventascorporativas@oestech.com.ar">ventascorporativas@oestech.com.ar</a> con los
                 siguientes datos:
             </p>
 
@@ -151,20 +143,16 @@
             <div class="footer-section">
                 <h4>NOSOTROS</h4>
                 <ul>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="./nosotros.html">Nosotros</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
-                    <li><a href="#">Locales</a></li>
-                    <li><a href="#">Servicio Técnico</a></li>
+                    <li><a href="./servicio.html">Servicio Técnico</a></li>
                 </ul>
             </div>
 
             <div class="footer-section">
                 <h4>CORPORATIVO</h4>
                 <ul>
-                    <li><a href="#">Venta Corporativa</a></li>
-                    <li><a href="#">Prensa</a></li>
-                    <li><a href="#">Términos y Condiciones</a></li>
-                    <li><a href="#">Botón de Arrepentimiento</a></li>
+                    <li><a href="./ventaCorpo.html">Venta Corporativa</a></li>
                 </ul>
             </div>
 
@@ -184,19 +172,22 @@
                 <p>Lunes a Viernes de 10 a 18 hs</p>
                 <p><i class="fab fa-whatsapp"></i> 11-6624-8428</p>
                 <p><i class="fas fa-envelope"></i> ventas@oestech.com</p>
-                <button class="info-btn">INFO SOBRE ENVIOS</button>
+                <a href="./envios.html">
+                    <button class="info-btn">+ INFO</button>
+                </a>
             </div>
             <div>
                 <h4>SERVICIO TÉCNICO</h4>
                 <p>Lunes a Viernes de 9 a 18 hs</p>
                 <p>Villa Urquiza-CABA</p>
+                <a href="./servicio.html">
                 <button class="info-btn">+ INFO</button>
+                </a>
             </div>
             <div>
                 <h4>NUESTROS LOCALES</h4>
                 <p>Caballito · Flores · Microcentro · Tribunales</p>
                 <p>DOT Baires · San Justo · Tortugas Open Mall</p>
-                <button class="info-btn">+ INFO</button>
             </div>
         </div>
 
@@ -209,6 +200,7 @@
                 sin previo aviso.</small>
         </div>
     </footer>
+
 
     <script src="./js/products.js"></script>
     <script src="./js/carrito.js"></script>
