--- a/ofertas.html
+++ b/ofertas.html
@@ -110,6 +110,17 @@
 
     </main>
 
+        <!-- Botón para volver arriba -->
+    <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" class="scroll-top-btn">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <!-- Botón de WhatsApp -->
+    <a href="https://wa.me/54911XXXXXXXX" target="_blank" class="whatsapp-btn">
+        <!-- <i class="fab fa-whatsapp"></i> -->
+        <img src="./img/whatsapp.png" alt="WhatsApp">
+    </a>
+
     <!-- Footer -->
 
     <footer class="footer">
